# rustlib

./: .gitattributes  Makefile  Makefile.mk  README.md
readelf/: Cargo.toml  Makefile  README.md
readelf/doc/: DESIGN.md
readelf/doc/assets/: readelf-buff.plantuml  readelf-ph.plantuml  readelf-sh-decode.plantuml  readelf-sh.plantuml  readelf.plantuml
readelf/examples/: readelf.md  readelf.rs
readelf/resources/tests/: .gitattributes  test_files.json
readelf/resources/tests/elf/: README.md
readelf/resources/tests/elf/FreeBSD-12.4-RELEASE-sparc64-bootonly/: libpcap.so.8  sh
readelf/resources/tests/elf/FreeBSD-14.1-RELEASE-amd64-bootonly/: libpcap.so.8  sh
readelf/resources/tests/elf/FreeBSD-14.1-RELEASE-i386-bootonly/: libpcap.so.8  sh
readelf/resources/tests/elf/FreeBSD-14.1-RELEASE-powerpc-bootonly/: libpcap.so.8  sh
readelf/resources/tests/elf/FreeBSD-14.1-RELEASE-powerpc-powerpc64-bootonly/: libpcap.so.8  sh
readelf/resources/tests/elf/FreeBSD-14.1-RELEASE-powerpc-powerpc64le-bootonly/: libpcap.so.8  sh
readelf/src/: binparser.rs  class.rs  endian.rs  executable_type.rs  lib.rs  machine.rs  main.rs  osabi.rs  readelf.rs  section_flags.rs  section_type.rs  segment_flags.rs  segment_type.rs
readelf/src/binparser/: buffer.rs  file.rs  slice.rs  vecbuffer.rs
readelf/src/readelf/: program_header.rs  program_headers.rs  section_header.rs  section_headers.rs  string_section.rs
readelf/tests/: README.md  elf_header.rs
readelf/tests/common/: builder.rs  config.rs  mod.rs
readelf/tests/common/builder/: elfbuilder32.rs  elfbuilder64.rs
(+135 files in other folders)
