[package]
name = "readelf"
version = "0.1.0"
edition = "2021"
authors = ["Jason Curl <jcurl@arcor.de>"]
license = "MIT"
readme = "README.md"
description = "Read information from an ELF file"
publish = false

[dependencies]

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
test-case = "3.3.1"

[lib]
name = "readelf"

[[example]]
name = "readelf"
